src_old/objects/OrgCustomSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Generic org settings will be stored here</description>
    <fields>
        <fullName>AllowedFileType__c</fullName>
        <label>AllowedFileType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalRollbackDays__c</fullName>
        <label>ApprovalRollbackDays</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchNumberofJobImages__c</fullName>
        <description>BatchGenerateJobImageUrl batch process how many Job images needs to retrieve.</description>
        <label>Batch No of JobImages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchRetryAlertEmails__c</fullName>
        <label>BatchRetryAlertEmails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedProjectPendingArchiveDays__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number days since the project close date to set project archive status to pending</description>
        <label>ClosedProjectPendingArchiveDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosedProjectRetentionDays__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Closed Project Retention Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommunitySiteUrl__c</fullName>
        <label>CommunitySiteUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateAttemptSize__c</fullName>
        <label>Create Attempt Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditLineItemOrder__c</fullName>
        <label>Credit Line Item Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomLocationType__c</fullName>
        <description>Next level up from the bottom level location type. This value may be different across orgs.</description>
        <label>Custom Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataArchivePendingProjectsLimit__c</fullName>
        <label>Data Archive Pending Projects Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataArchiveProjectsLimit__c</fullName>
        <defaultValue>50</defaultValue>
        <label>DataArchiveProjectsLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataImportChunkSize__c</fullName>
        <description>Data import attachment chunk size, which is used by import jobs from program process</description>
        <label>Data Import Chunk Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultGroupProject__c</fullName>
        <label>DefaultGroupProject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultProjectRecordType__c</fullName>
        <label>Default Project Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efficiency__c</fullName>
        <label>Efficiency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnableMultiListQnsDragnDrop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag enables drag and drop feature on survey builder for multi select question.</description>
        <inlineHelpText>This flag enables drag and drop feature on survey builder for multi select question.</inlineHelpText>
        <label>EnableMultiListQnsDragnDrop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntityChangeLogPurgeDays__c</fullName>
        <label>Entity Change Log Purge Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EntityChangeLogPurgeSize__c</fullName>
        <label>Entity Change Log Purge Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EntityChangeLogURI__c</fullName>
        <label>Entity Change Log URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorNotificationEmail__c</fullName>
        <label>Error Notification Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExportJobReportUrl__c</fullName>
        <description>https://onehub--devmurali.lightning.force.com/one/one.app#/sObject/00O11000000Gbi8EAC/view?t=1492800857517&amp;fv0={projectNumber__c}</description>
        <label>Export Job Report Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FavoritePhotoMaxCount__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The maximum number of photos that can be marked as favorite</description>
        <label>FavoritePhotoMaxCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FileTypeCheckRequiredObjects__c</fullName>
        <label>File Type Check Required Objects</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoryRecordLimit__c</fullName>
        <label>History Record Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAttemptableFieldName__c</fullName>
        <label>IsAttemptableFieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAWImportChunkSize__c</fullName>
        <label>Job Attempt Worker ImportChunk Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JAWImportFields__c</fullName>
        <label>JAWImportFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAWImportTitle_c__c</fullName>
        <label>JAWImportTitle_c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobAttemptWorkerReportUrl__c</fullName>
        <label>JobAttemptWorkerReportUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobImportChunkSize__c</fullName>
        <description>Job import per transaction maximum jobs to modify</description>
        <inlineHelpText>Job import chunk size</inlineHelpText>
        <label>Job Import Chunk Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobImportFields__c</fullName>
        <label>Job Import Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobImportTitle__c</fullName>
        <label>Job Import Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationImportChunkSIze__c</fullName>
        <description>Location import chunk size</description>
        <label>Location Import Chunk SIze</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationImportFields__c</fullName>
        <description>project location fields list for update</description>
        <label>Location Import Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationImportTitle__c</fullName>
        <description>a list of comma separated field</description>
        <label>Location Import Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationReportUrl__c</fullName>
        <description>https://onehub--devmurali.lightning.force.com/one/one.app#/sObject/00O11000000Gbi8EAC/view?t=1492800857517&amp;fv0={projectNumber__c}</description>
        <inlineHelpText>Location Report URL</inlineHelpText>
        <label>LocationReportUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationSearchField__c</fullName>
        <description>The value is used to determine if the search location is based on location number or onehub location Id (location unique id)</description>
        <inlineHelpText>The valid values are LocationNumber__c and OneHubLocationId__c</inlineHelpText>
        <label>SearchLocationField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxProjectsPerWakeup__c</fullName>
        <description>The maximum number of projects to handle per schedule wake up</description>
        <inlineHelpText>The maximum number of projects to handle per schedule wake up</inlineHelpText>
        <label>MaxProjectsPerWakeup</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxServicesforManualGeneration__c</fullName>
        <label>Max Services for Manual Generation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximumRetryCount__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Maximum retry count</description>
        <label>MaximumRetryCount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonClosedShiftEmailTemplate__c</fullName>
        <description>an email template used to send email notification that the shift is not closed within X timeframe</description>
        <label>Non Closed Shift Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonClosedShiftTimeframe__c</fullName>
        <description>The time frame (minutes) that is used to send email notification to the assigned primary workers and his/her supervisor</description>
        <label>Non-closed shift notification timeframe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfBatchRetries__c</fullName>
        <label>Number Of Batch Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneHubAccountType__c</fullName>
        <label>OneHub Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgInstanceName__c</fullName>
        <description>To identify the prod org instance</description>
        <label>Org Instance Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageSize__c</fullName>
        <description>page size of the records that can be retrieved from the client</description>
        <label>Page Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhotoViewerChainType__c</fullName>
        <description>The chain type for the photo viewer filter. The type is the location type that is used to filter out the locations for that type.</description>
        <inlineHelpText>The chain type for the photo viewer filter</inlineHelpText>
        <label>PhotoViewerChainType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoViewerLookupSize__c</fullName>
        <description>configure the photo viewer lookup search result size</description>
        <label>PhotoViewer Lookup Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhotoViewerMaxExport__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The maximum image export count</description>
        <label>PhotoViewerMaxExport</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhotoViewerPageSize__c</fullName>
        <defaultValue>100</defaultValue>
        <label>PhotoViewerPageSize</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectInvoiceDueDateThreshold__c</fullName>
        <label>Project Invoice Due Date Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectLocationCancelationChatterMessage__c</fullName>
        <label>ProjectLocationCancelationChatterMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatusChangeSize__c</fullName>
        <label>Project Status Change Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReservationProcessLimit__c</fullName>
        <label>Reservation Process Limit</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReservationReportUrl__c</fullName>
        <description>https://onehub--unmanaged.lightning.force.com/lightning/r/Report/00O21000000OWZwEAO/view?fv0={ReservationId}</description>
        <label>ReservationReportUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceImportChunkSIze__c</fullName>
        <label>Service Import Chunk SIze</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceImportTitle__c</fullName>
        <label>Service Import Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPartyAgencyChangeEmailTemplate__c</fullName>
        <label>3PL Agency Change Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPartyAgencyDeniedContactId__c</fullName>
        <label>3PL Denied ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPartyAgencyReqContactId__c</fullName>
        <label>3PL Req ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateSequenceChangeLogSize__c</fullName>
        <label>Update Sequence Change Log Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdateSummaryBatchSize__c</fullName>
        <label>UpdateSummaryBatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Org Custom Settings</label>
</CustomObject>